apps/20-media/lazylibrarian/overlays/prod/dataangel.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lazylibrarian
spec:
  template:
    metadata:
      labels:
        vixens.io/sizing.dataangel: B-nano
        vixens.io/sizing.litestream: null
        vixens.io/sizing.config-syncer: null
        vixens.io/sizing.fix-permissions: null
        vixens.io/sizing.restore-config: null
        vixens.io/sizing.restore-db: null
      annotations:
        dataangel.io/bucket: "vixens-prod-lazylibrarian"
        dataangel.io/sqlite-paths: "/config/lazylibrarian.db"
        dataangel.io/fs-paths: "/config"
        dataangel.io/s3-endpoint: "http://192.168.111.69:9000"
        dataangel.io/deployment-name: "lazylibrarian"
        dataangel.io/rclone-interval: "60s"
        dataangel.io/metrics-enabled: "true"
        dataangel.io/lock-enabled: "false"
    spec:
      containers:
        - name: litestream
          $patch: delete
        - name: config-syncer
          $patch: delete
