apps/20-media/lazylibrarian/overlays/prod/resources-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lazylibrarian
spec:
  template:
    spec:
      containers:
        - name: lazylibrarian
        resources:
          limits:
            cpu: 500m
            memory: 261Mi
          requests:
            cpu: 23m
            memory: 174Mi
