apps/20-media/lazylibrarian/overlays/prod/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lazylibrarian-ingress
  labels:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: LazyLibrarian
    gethomepage.dev/icon: lazylibrarian.png
    gethomepage.dev/group: Media
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect-https@kubernetescrd
    vixens.io/nossoneeded: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: lazylibrarian.truxonline.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lazylibrarian
                port:
                  number: 5299
  tls:
    - hosts:
        - lazylibrarian.truxonline.com
      secretName: lazylibrarian-tls
